# Real-Time-Voronoi

./: .gitignore  .gitmodules  CMakeLists.txt  OpenCLWrapper.h  README.md  kernel.cl  main.c  vecs.h
libs/glfw/: .gitignore  CMakeLists.txt  README.md
libs/glfw/include/GLFW/: glfw3.h
